tucker done with fp8

--- a/FPDocs/fp8.html
+++ b/FPDocs/fp8.html
@@ -43,7 +43,7 @@
 			Tucker: Built a search dialog for selecting flora
 			<ul>
 				<li>
-					The search dialog (which can be seen <a href="./searchDialogTest.html">here</a>) allows the user to search for any flora in the dataset, either by common name or scientific name. Originally, this was going to be a tabbed layout, allowing the user to swtich between a "search by common name" tab and a "search by scientific name" tab. We felt that combining them would be a much more elegant solution.
+					The search dialog (which can be seen <a href="../searchDialogTest.html">here</a>) allows the user to search for any flora in the dataset, either by common name or scientific name. Originally, this was going to be a tabbed layout, allowing the user to swtich between a "search by common name" tab and a "search by scientific name" tab. We felt that combining them would be a much more elegant solution.
 				</li>
 				<li>
 					If the user clicks on one of the flora, it will become highlighted green to show that it is selected. It will also appear in the right pane, which holds the flora that have been selected so far. If the user either clicks on the highlighted flora on the left, or clicks on it on the right, the flora will be removed from the right pane and also become unhighlighted on the left.
