--- a/searchDialogTest.html
+++ b/searchDialogTest.html
@@ -1,31 +1,3 @@
-<!-- <html>
-<head>
-	
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<script type="text/javascript" src="js/list.min.js"></script>
-	<script type="text/javascript" src="list.fuzzysearch.min.js"></script>
-	<script type="text/javascript" src="js/parsedFurbishData.js"></script>
-	
-	<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
-</head>
-<body>
-
- <div id="floraList">
-	<ul class="list">
-		<li>
-			<h3 class="sciName"></h3>
-			<p class="comName"></p>
-		</li>
-	</ul>
-</div>
-
-
-
-
-
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -39,33 +11,17 @@
 <body>
 
 <div id="searchContainer">
-<!-- 	<ul class="tab">
-	  <li><a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'sciSearchContainer')"
-  			id="defaultOpen">Scientific Name</a></li>
-	  <li><a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'sciSearchContainer')">Common Name</a></li>
-	</ul> -->
+	<input type="text" id="sciSearchBar" onkeyup="searchFlora()" placeholder="Search for flora by scientific name.." title="Type in a flora">
+	<div id="sciSearchResults">
+		<div id='noResultMsg' style="display: none">No Results</div>
+		<ul id="sciList"></ul>
 
-	<!-- <div id="sciSearchContainer" class="tabcontent"> -->
-		<input type="text" id="sciSearchBar" onkeyup="searchFlora()" placeholder="Search for flora by scientific name.." title="Type in a flora">
-		<div id="sciSearchResults">
-			<div id='noResultMsg' style="display: none">No Results</div>
-			<ul id="sciList"></ul>
-		</div>
-		<div id="sciSearchSelected">
-			<ul id="sciSelectedList"></ul>
-		</div>
-	<!-- </div> -->
-	<!-- <div id="comSearchContainer" class="tabcontent">
-		<input type="text" id="comSearchBar" onkeyup="searchFlora()" placeholder="Search for flora by common name.." title="Type in a flora">
-		<div id="comSearchResults">
-			<div id='noResultMsg' style="display: none">No Results</div>
-			<ul id="comList"></ul>
-		</div>
-		<div id="comSearchSelected">
-			<ul id="comSelectedList"></ul>
-		</div>
-	</div> -->
-
+	</div>
+	<div id="sciSearchSelected">
+		<ul id="sciSelectedList"></ul>
+	</div>
+	<input type="button" name="btnSelectAll" value="Select All" onclick="selectAll()">
+	<input type="button" name="btnDeselectAll" value="Deselect All" onclick="deselectAll()">
 </div>
 
 <script type="text/javascript" src="searchDialogTest.js"></script>
