Sophie did first draft of FP12, definitely needs some editting

--- a/FPDocs/fp1.html
+++ b/FPDocs/fp1.html
@@ -15,7 +15,7 @@
 	<h3>The Big Picture</h3>
 
 	<figure>
-    <img src='pic.jpg' alight='right' alt="Bullhead pond lily, from “Plants and Flowers of Maine: Kate Furbish’s Watercolors”" width = "275" height = "275"/>
+    <img src='../img/pic.jpg' alight='right' alt="Bullhead pond lily, from “Plants and Flowers of Maine: Kate Furbish’s Watercolors”" width = "275" height = "275"/>
     <figcaption>Bullhead pond lily, from “Plants and Flowers of Maine: Kate Furbish’s Watercolors”.<sup><a href="#fn3" id="ref3">3</a></sup> </figcaption>
 	</figure>
 
