--- a/FPDocs/fp3.html
+++ b/FPDocs/fp3.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>CSCI 3665: Interactive Data Visualization</h1>
-	<h2>Dataset Description</h2>
+	<h2>FP3: Dataset Description</h2>
 	<h3>Sophia Ardell, Marcus Christiansen, Tucker Gordon</h3>
 	<h3>November 17, 2016</h3>
 	<h3>Kate Furbish Collection</h3>
@@ -28,7 +28,7 @@
 
 	<hr/>
 	<h3>Storyboarding for some of the possible questions</h3>
-	<center><img src="img/sketch.jpg" style="width: 700"></center>
+	<center><img src="../img/sketch.jpg" style="width: 700"></center>
 
 	<p>
 		For our project, we're thinking about doing one "super-visualization" with many features. The main interface includes a map of Maine, a slider for selecting date ranges, a searchable dialog box, and a "town inspector" box. The goal of this visulization is to be able to explore when and where Furbish found specific flora. By walking through each of the possible interactions, the functionality of each of these should become clear:
