--- a/FPDocs/fp6.html
+++ b/FPDocs/fp6.html
@@ -36,7 +36,7 @@
 
 	<hr/>
 	<h3>Sketch of initial interface and interactions</h3>
-	<center><img src="img/sketch.jpg" style="width: 700"></center>
+	<center><img src="../img/sketch.JPG" style="width: 700"></center>
 	<hr/>
 	<h3>Interactions:</h3>
 	<ol style = "font-size: 14px">
