--- a/menu.html
+++ b/menu.html
@@ -3,18 +3,22 @@
 	<title>Menu</title>
 </head>
 <body>
-	<b> <a href="./fp1.html">Project Description</a></b>
+	<b> <a href="./FPDocs/fp1.html">Project Description</a></b>
 	<br>
-	<b> <a href="./fp2.html">Dataset Description</a></b>
+	<b> <a href="./FPDocs/fp2.html">Dataset Description</a></b>
 	<br>
-	<b> <a href="./fp3.html">Questions and interactions</a></b>
+	<b> <a href="./FPDocs/fp3.html">Questions and interactions</a></b>
 	<br>
-	<b> <a href="./fp4.html">Goals</a></b>
+	<b> <a href="./FPDocs/fp4.html">Goals</a></b>
 	<br>
-	<b> <a href="./fp5.html">Week 1 Progress Report</a></b>
+	<b> <a href="./FPDocs/fp5.html">Week 1 Progress Report</a></b>
 	<br>
-	<b> <a href="./fp6.html">Implementation Path</a></b>
+	<b> <a href="./FPDocs/fp6.html">Implementation Path</a></b>
 	<br>
-	<b> <a href="./fp7.html">Week 2 Progress Report</a></b>
+	<b> <a href="./FPDocs/fp7.html">Week 2 Progress Report</a></b>
+	<br>
+	<b> <a href="./FPDocs/fp8.html">Week 3 Progress Report</a></b>
+	<br>
+	<b> <a href="./FPDocs/fp12.html">Goals, take 2</a></b>
 </body>
 </html>
