--- a/searchDialogTest.html
+++ b/searchDialogTest.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Search Dialog Test</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="js/list.min.js"></script>
 	<script type="text/javascript" src="js/parsedFurbishData.js"></script>
