created intial layout

--- a/furbishProject.html
+++ b/furbishProject.html
@@ -25,8 +25,8 @@
 		<div id="selectedListContainer">
 			<ul id="selectedList"></ul>
 		</div>
-		<input type="button" name="btnSelectAll" value="Select All" onclick="selectAll()">
-		<input type="button" name="btnDeselectAll" value="Deselect All" onclick="deselectAll()">
+		<input type="button" id="btnSelectAll" name="btnSelectAll" value="Select All" onclick="selectAll()">
+		<input type="button" id="btnDeselectAll" name="btnDeselectAll" value="Deselect All" onclick="deselectAll()">
 	</div>
 
 	<div id="inspectorContainer">
