Added Marcus' images for FP12, made more general local .gitignore

--- a/FPDocs/fp12.html
+++ b/FPDocs/fp12.html
@@ -12,7 +12,18 @@
 	<h3>Kate Furbish Collection</h3>
 	<hr/>
 	<h3>Approximately the visualization we hope to create by the end of the semester</h3>
-	<center><img src="../img/sketch_2.JPG" width="400" style="image-orientation:90deg"></center>
+	<center><img src="../img/map1.JPG" width="600"></center>
+	<br>
+	<center><img src="../img/map2.JPG" width="600"></center>
+	<hr/>
+	<h3>General Description and Interactions</h3>
+	<p>For our project, we are doing one "super-visualization" with many features. The main interface includes a map of Maine split by towns, a slider for selecting date ranges to examine, a searchable dialog box for both scientific and common names, and a "town inspector" box. The goal of this visulization is to be able to explore when and where Furbish found specific flora. By walking through each of the possible interactions, the functionality of each of these should become clear: </p>
+	<ul>
+		<li>The year slider allows a user to select a range of years that they want to explore. Only samples that occured within that range will appear in the visualization.</li>
+		<li>
+			The search box allows for searching by AH Scientific name, and by common name. The user can search for a flora by name, and then check any results that they want to visualize. Whenever a flora is checked, a dot will appear at all of the towns in which that flora was sampled (within the specified year range). If there is already a dot there (i.e. there has already been a flora checked with a sample there), the dot will increase in size. There is also be a way to select or deselect all flora.
+		</li>
+	</ul>
 	<hr/>
 	<h3>Goals by date</h3>
 	<strong>Week 1 (Nov. 13-19)</strong>
