editted FP11 and FP12

--- a/FPDocs/fp11.html
+++ b/FPDocs/fp11.html
@@ -1,14 +1,14 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>FP11: Describe your project</title>
+	<title>FP11: Describe your project, take 2</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 	<h1>CSCI 3665: Interactive Data Visualization</h1>
-	<h2>FP11: Describe your project</h2>
+	<h2>FP11: Describe your project, take 2</h2>
 	<h3>Sophia Ardell, Marcus Christiansen, Tucker Gordon</h3>
-	<h3>November 15, 2016</h3>
+	<h3>November 29, 2016</h3>
 	<h3>Kate Furbish Collection</h3>
 	<h3>Collaborator: Kat Stefko</h3>
 	<hr/>
@@ -57,11 +57,11 @@
 		<ul>
 			<li>
 				Where did she go and when?
-				<ul><li>This can be seen through the year slider and the dots on the map. The dots indicate plant samples in a specific town of Maine. You can see where she went and when by adjusting the slider to a period of time (in years) that interests you and seeing the location and size of the dots. The dots will indicate that she collected a plant sample from a specific town during that time period, and the size of the dot will indicate the number of samples she collected at that specific town during the time period.</li></ul>
+				<ul><li>This can be seen through the year slider and the dots on the map. You can see where she went and when by adjusting the slider to a period of time (in years) that interests you and seeing the location and size of the dots. The locations of the dots illustrate which town(s) that samples were collected in during that time period, and the size of the dot will indicate the number of samples she collected at that specific town during the time period.</li></ul>
 			</li>
 			<li>
 				Where are certain flora located?
-				<ul><li>This can be seen through searching for flora and seeing where the corresponding dots appear on them map. When you select a set of flora from the flora search box, dots will appear on the map of Maine indicating that Kate Furbish found these flora at these locations.</li></ul>
+				<ul><li>This can be seen when you search and select a set of flora from the flora search box, as corresponding dots will appear on the map of Maine indicating that Kate Furbish found these flora at these locations.</li></ul>
 			</li>
 			<li>
 				Where in the collection is this flora (regarding page and volume number)?
@@ -69,7 +69,15 @@
 			</li>
 			<li>
 				Where did she find the most flora?
-				<ul><li>This can be seen by selecting all flora and checking the size of the respective dots on the map. When you select a set of flora from the flora search box, dots will appear on the map of Maine indicating that Kate Furbish found these flora at these locations. The size of these dots indicate how many samples of the selected flora she found at those specific locations.</li></ul>
+				<ul><li>This can be seen by selecting all flora and comparing the size of the respective dots on the map. As already explained above, when you select a set of flora from the flora search box, dots will appear on the map of Maine indicating that Kate Furbish found these flora at these locations. The size of these dots indicate how many samples of the selected flora she found at those specific locations.</li></ul>
+			</li>
+			<li>
+				What were her most active years?
+				<ul><li>This can be seen by selecting all flora samples, then adjusting the slider to display each year's work seperately. The user can then easily compare year intervals independently of chronological order.</li></ul>
+			</li>
+			<li>
+				Is there a way we can evaluate for genus instead of species?
+				<ul><li>Yes, the search dialog shows the results of a search for any part of a scientific or common name, which easily affords a search through either lens. The user can then select all genus members and show the results on the map.</li></ul>
 			</li>
 		</ul>
 	</p>
