--- a/menu.html
+++ b/menu.html
@@ -19,6 +19,8 @@
 	<br>
 	<b> <a href="./FPDocs/fp8.html">Week 3 Progress Report</a></b>
 	<br>
+	<b> <a href="./FPDocs/fp11.html">Project Description, take 2</a></b>
+	<br>
 	<b> <a href="./FPDocs/fp12.html">Goals, take 2</a></b>
 </body>
 </html>
