working on table layout

--- a/furbishProject.html
+++ b/furbishProject.html
@@ -31,20 +31,133 @@
 
 	<div id="inspectorContainer">
 		<h5 class="tableTitle">Town:</h5>
-		<table id="tableInspector">
-			<th>Common Name:</th>
-			<th>Scientific Name:</th>
-			<th>Year:</th>
-			<th>Volume:</th>
-			<th>Page:</th>
-			<tr>
-				<td>sdfasdfasd</td>
-				<td>sdfasdfasd</td>
-				<td>2016</td>
-				<td>13</td>
-				<td>15</td>
-			</tr>
-		</table>
+		
+  <div class="tbl-content">
+    <table cellpadding="0" cellspacing="0" border="0">
+    <thead class="tbl-header">
+        <tr>
+          <th>Common Name</th>
+          <th>Scientific Name</th>
+          <th>Entry Date</th>
+          <th>Volume</th>
+          <th>Page</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+        <tr>
+          <td>American Water-horehound</td>
+          <td>Lycopus americanus Muhl Ex W Bart</td>
+          <td>12/12/1999</td>
+          <td>14</td>
+          <td>-247</td>
+        </tr>
+      </tbody>
+    </table>
 	</div>
 
 	<script type="text/javascript" src="searchDialogTest.js"></script>
