cleaned up main directory and built readme

--- a/furbishProject.html
+++ b/furbishProject.html
@@ -165,7 +165,7 @@
     </table>
 	</div>
 
-	<script type="text/javascript" src="searchDialogTest.js"></script>
+	<script type="text/javascript" src="js/searchDialog.js"></script>
 </div>
 </body>
 </html>
