--- a/furbishProject.html
+++ b/furbishProject.html
@@ -35,7 +35,7 @@
 	</div>
 
 	<div id="inspectorContainer">
-		<h5 class="tableTitle">Town:</h5>
+		<h5 class="tableTitle"><span>Town:</h5>
 		
   <div class="tbl-content">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -48,7 +48,7 @@
           <th>Page</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id="floraTableBody">
         <tr>
           <td>American Water-horehound</td>
           <td>Lycopus americanus Muhl Ex W Bart</td>
@@ -56,116 +56,14 @@
           <td>14</td>
           <td>-247</td>
         </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
-        <tr>
-          <td>American Water-horehound</td>
-          <td>Lycopus americanus Muhl Ex W Bart</td>
-          <td>12/12/1999</td>
-          <td>14</td>
-          <td>-247</td>
-        </tr>
+        <!-- Dummy row that prevents all of the rows above it from expanding to fill the table -->
+        <tr style="height: 100%;"></tr>
       </tbody>
     </table>
 	</div>
 
 	<script type="text/javascript" src="js/searchDialog.js"></script>
+	<script type="text/javascript" src="js/townInspector.js"></script>
 </div>
 </body>
 </html>
